--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,39 +1,51 @@
 body {
     background-color: #fff;
+    /* TODO: padding-left is wonky on mobile */
     padding: 80px;
     font: normal 16px "Karla", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
-
+    max-width: 500px;
 }
 a {
     text-decoration: none;
+    font-weight: bold;    
+    color: darksalmon;
+}
+a:hover {
+    text-decoration: underline;
 }
 header {
+    align-content: space-between;
+    padding-bottom: 20px;
     position: relative;
     border-bottom: 1px solid #ddd;
 }
 footer {
     border-top: 1px solid #ddd;
     color: #aaa;
-    font-family: "Lora", Georgia, serif;
 }
 #name {
     font: 30px "Lora", Georgia, serif;
-    margin-bottom: 20px;
+}
+#links {
+    display: flex;
+    flex-flow: row wrap;
+}
+#links a {
+    margin-right: 10px;
 }
 #printable {
-/*  delete for PDF button */
     display: none;
     position: absolute;
-    top: 4px;
+    top: 5px;
     right: 0;
     color: white;
-    background-color: #aaa;
+    background-color: darksalmon;
     border-radius: 2px;
     padding: 4px 7px;
 }
-#printable:hover {
-    background-color: #777;
+.section {
+    margin: 10px 0;
 }
 h1 {
     font: normal 24px "Lora", Georgia, serif;
@@ -44,5 +56,6 @@ h2 {
 }
 h3 {
     font: normal 16px "Karla", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    letter-spacing: 1px;
     text-transform: uppercase;
 }
