--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,15 +1,16 @@
 body {
     background-color: #fff;
-    /* TODO: padding-left is wonky on mobile */
-    padding: 80px;
     font: normal 16px "Karla", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
-    max-width: 500px;
+    max-width: 600px;
+    width: 70%;
+    margin-left: 15%;
+    margin-top: 100px;
 }
 a {
     text-decoration: none;
-    font-weight: bold;    
-    color: darksalmon;
+    font-weight: bold;
+    color: #c59ca0;
 }
 a:hover {
     text-decoration: underline;
@@ -25,6 +26,7 @@ footer {
     color: #aaa;
 }
 #name {
+    margin-left: -1px;
     font: 30px "Lora", Georgia, serif;
 }
 #links {
@@ -39,7 +41,7 @@ footer {
     top: 5px;
     right: 0;
     color: white;
-    background-color: darksalmon;
+    background-color: #c59ca0;
     border-radius: 2px;
     padding: 4px 7px;
 }
